--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,6 +4,6 @@
 
 @import './layout/footer.scss';
 @import './layout/header.scss';
-@import './layout/main.scss';
+@import './layout/body.scss';
 
 @import './views/home.scss';
