--- a/css/main.css
+++ b/css/main.css
@@ -7,75 +7,89 @@
   width: 100%;
   height: 100vh;
   background-color: purple; }
-  .main-container .left-menu {
-    background-color: white;
-    position: relative;
-    width: 4.5rem;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    transition: all .3s ease; }
-    .main-container .left-menu .left-menu:hover {
-      width: 13rem; }
-    .main-container .left-menu .left-menu ul li a {
-      display: flex; }
-  .main-container .logo {
-    width: 80px;
-    position: relative;
-    top: 1rem;
-    left: 0.5rem;
-    display: flex;
-    margin: 10px 0 0 0px;
-    justify-content: center;
-    align-items: center; }
-    .main-container .logo .logo img {
-      width: 100%;
-      z-index: 100;
-      position: absolute; }
-    .main-container .logo .logo span {
-      font-weight: bold;
-      padding: 10px;
-      font-size: 18px;
-      text-transform: uppercase; }
-    .main-container .logo .logo a {
-      position: relative;
-      left: 100px;
-      color: #7410f0;
-      font-size: 18px;
-      display: table;
-      text-align: left;
-      width: 300px;
-      text-decoration: none;
-      padding: 10px; }
-  .main-container .left-menu ul {
-    margin-top: 2rem;
-    margin-left: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; }
-  .main-container ul li {
-    list-style: none;
-    margin-bottom: 1rem;
-    align-items: center;
-    transition: all .3s linear; }
-  .main-container ul li a {
-    text-decoration: none;
-    color: #7410f0;
-    font-size: 1.4rem;
-    cursor: pointer;
-    transition: all .3s linear;
-    margin-right: 1.2rem; }
-  .main-container .sidebar-item i {
-    width: 20px;
-    height: 20px;
-    text-align: center; }
-  .main-container #settings {
-    position: absolute;
-    bottom: 1rem; }
-  .main-container .left-menu ul li:hover {
-    transform: translateX(0.4rem);
-    transition: all .4s linear; }
-  .main-container .left-menu ul li:hover .fa-solid, .main-container .left-menu ul li:hover a {
-    font-weight: bold;
-    color: purple; }
+
+.left-menu {
+  background-color: white;
+  position: relative;
+  width: 4.5rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  transition: all .3s ease; }
+
+.left-menu:hover {
+  width: 13rem; }
+
+.left-menu ul li a {
+  display: flex; }
+
+.logo {
+  width: 80px;
+  position: relative;
+  top: 1rem;
+  left: 0.5rem;
+  display: flex;
+  margin: 10px 0 0 0px;
+  justify-content: center;
+  align-items: center; }
+
+.logo img {
+  width: 100%;
+  z-index: 100;
+  position: absolute; }
+
+.logo span {
+  font-weight: bold;
+  padding: 10px;
+  font-size: 18px;
+  text-transform: uppercase; }
+
+.logo a {
+  position: relative;
+  left: 100px;
+  color: #7410f0;
+  font-size: 18px;
+  display: table;
+  text-align: left;
+  width: 300px;
+  text-decoration: none;
+  padding: 10px; }
+
+.left-menu ul {
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; }
+
+ul li {
+  list-style: none;
+  margin-bottom: 1rem;
+  align-items: center;
+  transition: all .3s linear; }
+
+ul li a {
+  text-decoration: none;
+  color: #7410f0;
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: all .3s linear;
+  margin-right: 1.2rem; }
+
+.sidebar-item i {
+  width: 20px;
+  height: 20px;
+  text-align: center; }
+
+#settings {
+  position: absolute;
+  bottom: 1rem; }
+
+.left-menu ul li:hover {
+  transform: translateX(0.4rem);
+  transition: all .4s linear; }
+
+.left-menu ul li:hover .fa-solid, .left-menu ul li:hover a {
+  font-weight: bold;
+  color: purple; }
