--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 @import './base/colors.scss';
 
 @import './components/cards.scss';
+@import './components/animaciones.scss';
 
 @import './layout/footer.scss';
 @import './layout/header.scss';
