--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -1,10 +1,10 @@
 .main-container {
     width: 100%;
     height: 100vh;
-    background-color: purple;
+    background-color: white;
 }
 .left-menu {
-    background-color: white;
+    background-color: whitesmoke;
     position: relative;
     width: 4.5rem;
     height: 100vh;
@@ -24,6 +24,7 @@
     width: 80px;
     position: relative;
     top: 1rem;
+    margin-bottom: 2rem;
     left: 0.5rem;
     display: flex;
     margin: 10px 0 0 0px;
@@ -31,7 +32,7 @@
     align-items: center;
 }
 .logo img {
-    width: 100%;
+    width: 40px;
     z-index: 100;
     position: absolute;
 }
@@ -40,11 +41,12 @@
     padding: 10px;
     font-size: 18px;
     text-transform: uppercase;
+    display: contents;
 }
 .logo a {
     position: relative;
     left: 100px;
-    color: #7410f0;
+    color: #14416f;
     font-size: 18px;
     display: table;
     text-align: left;
@@ -54,20 +56,21 @@
 }
 .left-menu ul {
     margin-top: 2rem;
-    margin-left: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 ul li {
+    display: flex;
     list-style: none;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     align-items: center;
     transition: all .3s linear; 
 }
 ul li a {
     text-decoration: none;
-    color: #7410f0;
+    color: #14416f;
     font-size: 1.4rem;
     cursor: pointer;
     transition: all .3s linear;
@@ -88,5 +91,13 @@ ul li a {
 }
 .left-menu ul li:hover .fa-solid , .left-menu ul li:hover a {
     font-weight: bold;
-    color: purple;
+    color: #12b2e6;
 }   
+
+.parallax {
+    display: flex;
+    position:absolute;
+    margin-left: 35%;
+    top: 20%;
+    text-align: center;
+}
