--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,15 @@
-h1 {
-  color: #14416f; }
+.title-hero h1 {
+  color: #14416f;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400; }
 
-.parallas, .main, .texto {
-  margin: 0 auto; }
-
-.parallax {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 30rem;
-  max-width: 100%;
-  position: relative; }
-
-.texto-interior {
-  color: #fff;
-  font-size: 60px;
-  font-weight: bold;
-  left: 10%;
-  position: absolute;
+footer {
+  background-color: #14416f;
   text-align: center;
-  top: 40%;
-  width: 80%; }
-
-.img-uno {
-  background-image: url(https://images.pexels.com/photos/4091169/pexels-photo-4091169.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1); }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-main {
-  display: flex; }
+  color: whitesmoke;
+  font-weight: 100;
+  font-size: 10px;
+  padding: 10px; }
 
 .main-container {
   width: 100%;
@@ -128,9 +105,25 @@ ul li a {
   font-weight: bold;
   color: #12b2e6; }
 
-.parallax {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+main {
   display: flex;
+  font-family: 'Montserrat', sans-serif; }
+
+.content {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  margin-left: 35%;
-  top: 20%;
+  margin-left: 20%;
+  margin-right: 5%;
+  top: 5%;
   text-align: center; }
+  .content .title-hero {
+    margin-left: -10%; }
+  .content .text-hero {
+    padding: 10px;
+    padding-top: 5%; }
