--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -1,103 +1,17 @@
-.main-container {
-    width: 100%;
-    height: 100vh;
-    background-color: white;
-}
-.left-menu {
-    background-color: whitesmoke;
-    position: relative;
-    width: 4.5rem;
-    height: 100vh;
+
+.content {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    transition: all .3s ease;
-}
-.left-menu:hover {
-    width: 13rem;
-
-}
-.left-menu ul li a {
-    display: flex;
-}
-.logo {
-    width: 80px;
-    position: relative;
-    top: 1rem;
-    margin-bottom: 2rem;
-    left: 0.5rem;
-    display: flex;
-    margin: 10px 0 0 0px;
-    justify-content: center;
-    align-items: center;
-}
-.logo img {
-    width: 40px;
-    z-index: 100;
-    position: absolute;
-}
-.logo span {
-    font-weight: bold;
-    padding: 10px;
-    font-size: 18px;
-    text-transform: uppercase;
-    display: contents;
-}
-.logo a {
-    position: relative;
-    left: 100px;
-    color: #14416f;
-    font-size: 18px;
-    display: table;
-    text-align: left;
-    width: 300px;
-    text-decoration: none;
-    padding: 10px;
-}
-.left-menu ul {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-ul li {
-    display: flex;
-    list-style: none;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    align-items: center;
-    transition: all .3s linear; 
-}
-ul li a {
-    text-decoration: none;
-    color: #14416f;
-    font-size: 1.4rem;
-    cursor: pointer;
-    transition: all .3s linear;
-    margin-right: 1.2rem;
-}
-.sidebar-item i {
-    width: 20px;
-    height: 20px;
-    text-align: center;
-}
-#settings {
-    position: absolute;
-    bottom: 1rem;
-}
-.left-menu ul li:hover {
-    transform: translateX(.4rem);
-    transition: all .4s linear;
-}
-.left-menu ul li:hover .fa-solid , .left-menu ul li:hover a {
-    font-weight: bold;
-    color: #12b2e6;
-}   
-
-.parallax {
-    display: flex;
     position:absolute;
-    margin-left: 35%;
-    top: 20%;
+    margin-left: 20%;
+    margin-right: 5%;
+    top: 5%;
     text-align: center;
+    .title-hero {
+        margin-left: -10%;
+    }
+    .text-hero {
+        padding: 10px;
+        padding-top: 5%;
+    }
 }
