--- a/scss/base/tipografia.scss
+++ b/scss/base/tipografia.scss
@@ -1,5 +1,17 @@
-.title-hero h1{
+.title-hero h1 {
     color: #14416f;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
+}
+
+h2 {
+    color: #14416f;
+    font-family:'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 20px;
+    color: #1175b8;
 }
