--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,16 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 400; }
 
+h2 {
+  color: #14416f;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: 24px; }
+
+h3 {
+  font-size: 20px;
+  color: #1175b8; }
+
 footer {
   background-color: #14416f;
   text-align: center;
