--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,4 @@
-@import './base/colors.scss';
+@import './base/tipografia.scss';
 
 @import './components/cards.scss';
 @import './components/animaciones.scss';
