--- a/scss/base/tipografia.scss
+++ b/scss/base/tipografia.scss
@@ -15,3 +15,9 @@ h3 {
     font-size: 20px;
     color: #1175b8;
 }
+
+p {
+    font-family:'Montserrat', sans-serif;
+    font-weight: 300;
+    color: black;
+}
