--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -11,7 +11,15 @@
         margin-left: -10%;
     }
     .text-hero {
-        padding: 10px;
+        padding: 12px;
         padding-top: 5%;
+        text-align: left;
     }
+}
+
+.conect ul a li {
+    img {
+        width: 50px;
+    }
+      
 }
