--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -17,9 +17,16 @@
     }
 }
 
-.conect ul a li {
+div.conect ul {
+    display:flex;
+    flex-direction: row;
+    a {
+        padding: 20px;
+        text-decoration: none;
+        list-style: none;
+    }
+    
     img {
         width: 50px;
-    }
-      
+    }  
 }
