--- a/css/main.css
+++ b/css/main.css
@@ -131,35 +131,39 @@ main {
 
 .alert {
   display: flex;
-  margin-left: 15%; }
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
   .alert i {
     font-size: 30px;
     color: red; }
-  .alert p {
-    padding-left: 10px; }
 
 .content {
   display: flex;
   flex-direction: column;
   position: absolute;
   margin-left: 20%;
-  margin-right: 8%;
+  margin-right: 20%;
   top: 15%;
   text-align: center; }
   .content .title-hero {
     margin-left: -10%; }
   .content .text-hero {
-    padding: 15px;
     padding-top: 5%;
-    text-align: justify; }
+    text-align: justify;
+    align-items: center;
+    justify-content: center;
+    text-align: center; }
 
 div.conect ul {
   display: flex;
   flex-direction: row;
-  margin-left: 20%;
-  align-items: center; }
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
   div.conect ul a {
-    padding: 0px 30px;
+    padding-right: 30px;
     text-decoration: none;
     list-style: none; }
   div.conect ul img {
