--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,8 @@ footer {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 100; }
 
 .left-menu:hover {
   width: 13rem; }
@@ -143,7 +144,7 @@ main {
   display: flex;
   flex-direction: column;
   position: absolute;
-  margin-left: 20%;
+  margin-left: 22%;
   margin-right: 15%;
   top: 15%;
   text-align: center; }
