--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -4,18 +4,15 @@
     flex-direction: column;
     position:absolute;
     margin-left: 22%;
-    margin-right: 15%;
-    top: 15%;
+    margin-right: 20%;
+    top: 10%;
     text-align: center;
-    .title-hero {
-        margin-left: -10%;
-    }
     .text-hero {
         padding-top: 5%;
         text-align: justify;
         align-items: center;
         justify-content: center;
-        text-align: center;
+        text-align: justify;
     }
 }
 
