agregando contenido page promociones

--- a/scss/layout/body.scss
+++ b/scss/layout/body.scss
@@ -6,7 +6,8 @@
 
 main {
    display: flex;
-   font-family:'Montserrat', sans-serif;;
+   font-family:'Montserrat', sans-serif;
+   height: auto;
 }
 
 .alert {
@@ -21,3 +22,8 @@ main {
     }
    
 }
+
+
+
+
+
