--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ footer {
   padding: 10px; }
 
 .main-container {
-  width: 100%;
   height: 100vh;
   background-color: white; }
 
@@ -43,7 +42,7 @@ footer {
   z-index: 100; }
 
 .left-menu:hover {
-  width: 13rem; }
+  width: 14rem; }
 
 .left-menu ul li a {
   display: flex; }
@@ -128,7 +127,8 @@ ul li a {
 
 main {
   display: flex;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  height: auto; }
 
 .alert {
   display: flex;
@@ -143,11 +143,11 @@ main {
 .content {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  margin-left: 22%;
-  margin-right: 20%;
+  margin: 5%;
   top: 10%;
-  text-align: center; }
+  text-align: center;
+  height: auto;
+  width: 100%; }
   .content .text-hero {
     padding-top: 5%;
     text-align: justify;
