--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -2,11 +2,11 @@
 .content {
     display: flex;
     flex-direction: column;
-    position:absolute;
-    margin-left: 22%;
-    margin-right: 20%;
+    margin: 5%;
     top: 10%;
     text-align: center;
+    height: auto;
+    width: 100%;
     .text-hero {
         padding-top: 5%;
         text-align: justify;
