--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,13 @@ p {
   color: black; }
 
 /* Acordeon */
+.accordion {
+  display: flex;
+  justify-content: space-evenly; }
+  .accordion .accordion-colum {
+    width: 100%;
+    margin: 10px; }
+
 .accordion-body p {
   text-align: justify; }
 
