--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,3 +8,7 @@
 @import './layout/body.scss';
 
 @import './views/home.scss';
+@import './views/calidad.scss';
+@import './views/herramientas.scss';
+@import './views/informacion.scss';
+@import './views/promociones.scss';
