--- a/scss/views/herramientas.scss
+++ b/scss/views/herramientas.scss
@@ -12,9 +12,38 @@
         color: #12b2e6; 
     }
     .tools-item {
-        margin: 15px 40px;
+        margin: 20px 40px;
     }
     .tools-title {
         padding: 5px;
     }
+}
+
+.container {
+      margin-top: 5%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+}
+
+.calculadora {
+    display: grid;
+    grid-template-columns: repeat(4,65px);
+    grid-template-rows: 150px repeat(5, 65px);
+    background-color: #14416f;
+    padding: 15px;
+    border-radius: 32px;
+    box-shadow: 15px 10px 0px 5px #00000033;
+}
+
+.button {
+    cursor: pointer;
+    margin: 5px;
+    padding: 0;
+    border-radius: 32px;
+    font-size: 1.5em;
+    border: none;
+    background-color: #14416f;
+    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
 }
