--- a/scss/views/herramientas.scss
+++ b/scss/views/herramientas.scss
@@ -22,28 +22,69 @@
 .container {
       margin-top: 5%;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      .title-hero {
+        margin: 2%;
+      }
 }
 
 .calculadora {
     display: grid;
-    grid-template-columns: repeat(4,65px);
-    grid-template-rows: 150px repeat(5, 65px);
+    grid-template-columns: repeat(4,55px);
+    grid-template-rows: 120px repeat(5, 55px);
     background-color: #14416f;
     padding: 15px;
     border-radius: 32px;
-    box-shadow: 15px 10px 0px 5px #00000033;
+    box-shadow: 5px 10px 0px 5px #00000033;
+    color: #fff;
+    margin-bottom: 5%;
 }
 
-.button {
-    cursor: pointer;
-    margin: 5px;
-    padding: 0;
-    border-radius: 32px;
-    font-size: 1.5em;
-    border: none;
-    background-color: #14416f;
-    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+button {
+  cursor: pointer;
+  margin: 5px;
+  padding: 0;
+  font-size: 1.5em;
+  border: none;
+  background-color: #14416f;
+  box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+  color: #fff;
 }
+
+button:active {
+    background-color: #12b2e6;
+}
+
+button:focus {
+    outline: none;
+}
+
+.colum-2 {
+    grid-column: span 2;
+}
+
+.display {
+    grid-column: 1 / -1;
+    padding: 16px;
+    display: flex;
+    margin: 10px 10px;
+    flex-direction: column;
+    align-items: flex-end;
+    background-color: #363636;
+    text-align: right;
+    justify-content: space-between;
+    word-break: break-all;
+    box-shadow: 0px 0px 0px 10px #00000033;
+}
+
+.valor-actual {
+    font-size: 1.5em;
+}
+
+.valor-anterior {
+    font-size: 2em;
+}
+
