--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,8 @@ div.conect ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 5%; }
+  margin: 5% 10%;
+  padding: 5%; }
   .tools i {
     font-size: 50px;
     color: #14416f; }
@@ -233,7 +234,7 @@ div.conect ul {
   color: #fff;
   margin-bottom: 5%; }
 
-button {
+button.dif {
   cursor: pointer;
   margin: 5px;
   padding: 0;
@@ -243,10 +244,10 @@ button {
   box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
   color: #fff; }
 
-button:active {
+button.dif:active {
   background-color: #12b2e6; }
 
-button:focus {
+button.dif:focus {
   outline: none; }
 
 .colum-2 {
